--- a/StageEditorDev/StageEditorDev.vcxproj.filters
+++ b/StageEditorDev/StageEditorDev.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClInclude Include="Camera\EditorCamera.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\TogeEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\TripleEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\GravityBoxEditor.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
@@ -41,5 +42,6 @@
     <ClCompile Include="Camera\EditorCamera.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\TogeEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\TripleEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\GravityBoxEditor.cpp" />
   </ItemGroup>
 </Project>
