--- a/StageEditorDev/StageEditorDev.vcxproj.filters
+++ b/StageEditorDev/StageEditorDev.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClInclude Include="SceneEditor\ActorEditor\GravityBox2Editor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\GravityBox4Editor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\CircleBeeEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\StraightBeeEditor.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
@@ -47,5 +48,6 @@
     <ClCompile Include="SceneEditor\ActorEditor\GravityBox2Editor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\GravityBox4Editor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\CircleBeeEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\StraightBeeEditor.cpp" />
   </ItemGroup>
 </Project>
