--- a/StageEditor/StageEditor.vcxproj.filters
+++ b/StageEditor/StageEditor.vcxproj.filters
@@ -23,6 +23,7 @@
     <ClCompile Include="SaveFunc.cpp" />
     <ClCompile Include="StageEditor.cpp" />
     <ClCompile Include="StartActor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\GoalEdiot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\EditorCamera.hpp" />
@@ -49,5 +50,7 @@
     <ClInclude Include="SaveFunc.hpp" />
     <ClInclude Include="StageEditor.hpp" />
     <ClInclude Include="StartActor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\GoalEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\Utility\StringDataCheker.hpp" />
   </ItemGroup>
 </Project>
