--- a/StageEditor/StageEditor.vcxproj.filters
+++ b/StageEditor/StageEditor.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClCompile Include="StageEditor.cpp" />
     <ClCompile Include="StartActor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\GoalEdiot.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\DiamondEditor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\EditorCamera.hpp" />
@@ -52,5 +53,6 @@
     <ClInclude Include="StartActor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\GoalEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\Utility\StringDataCheker.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\DiamondEditor.hpp" />
   </ItemGroup>
 </Project>
