--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -147,8 +147,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="StageSelect\DrawHexMap.cpp" />
+    <ClCompile Include="StageSelect\HexChip.cpp" />
+    <ClCompile Include="StageSelect\HexMap.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="StageSelect\DrawHexMap.hpp" />
+    <ClInclude Include="StageSelect\Hex.hpp" />
+    <ClInclude Include="StageSelect\HexChip.hpp" />
+    <ClInclude Include="StageSelect\HexMap.hpp" />
+    <ClInclude Include="StageSelect\HexMapParam.hpp" />
+    <ClInclude Include="StageSelect\StageData.hpp" />
     <ClInclude Include="StartActor.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
