--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -2,8 +2,17 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="StageSelect\DrawHexMap.cpp" />
+    <ClCompile Include="StageSelect\HexMap.cpp" />
+    <ClCompile Include="StageSelect\HexChip.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StartActor.hpp" />
+    <ClInclude Include="StageSelect\Hex.hpp" />
+    <ClInclude Include="StageSelect\StageData.hpp" />
+    <ClInclude Include="StageSelect\HexMap.hpp" />
+    <ClInclude Include="StageSelect\DrawHexMap.hpp" />
+    <ClInclude Include="StageSelect\HexMapParam.hpp" />
+    <ClInclude Include="StageSelect\HexChip.hpp" />
   </ItemGroup>
 </Project>
