--- a/StageEditor/StageEditor.vcxproj.filters
+++ b/StageEditor/StageEditor.vcxproj.filters
@@ -24,8 +24,8 @@
     <ClCompile Include="StageEditor.cpp" />
     <ClCompile Include="StartActor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\GoalEdiot.cpp" />
-    <ClCompile Include="SceneEditor\ActorEditor\DiamondEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\BlinderEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\GemEditor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\EditorCamera.hpp" />
@@ -54,7 +54,7 @@
     <ClInclude Include="StartActor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\GoalEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\Utility\StringDataCheker.hpp" />
-    <ClInclude Include="SceneEditor\ActorEditor\DiamondEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\BlinderEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\GemEditor.hpp" />
   </ItemGroup>
 </Project>
