--- a/StageEditor/StageEditor.vcxproj
+++ b/StageEditor/StageEditor.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\GuruWarpEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\PlayerEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\StraightBeeEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\TearGemEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\TogeEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\TripleEditor.cpp" />
     <ClCompile Include="SceneEditor\CreateActorEditor.cpp" />
@@ -193,6 +194,7 @@
     <ClInclude Include="SceneEditor\ActorEditor\GuruWarpEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\PlayerEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\StraightBeeEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\TearGemEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\TogeEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\TripleEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\Utility\StringDataCheker.hpp" />
