--- a/StageEditor/StageEditor.vcxproj.filters
+++ b/StageEditor/StageEditor.vcxproj.filters
@@ -26,6 +26,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\GoalEdiot.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\BlinderEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\GemEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\TearGemEditor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\EditorCamera.hpp" />
@@ -56,5 +57,6 @@
     <ClInclude Include="SceneEditor\ActorEditor\Utility\StringDataCheker.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\BlinderEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\GemEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\TearGemEditor.hpp" />
   </ItemGroup>
 </Project>
