--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="StageSelect\HexChip.cpp" />
     <ClCompile Include="StageSelect\LevelDisplay\LevelDisplay.cpp" />
     <ClCompile Include="StageSelect\StageSelect.cpp" />
+    <ClCompile Include="StageSelect\TearGemDisplay.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StageSelect\ChoiceIcon.hpp" />
@@ -161,6 +162,8 @@
     <ClInclude Include="StageSelect\StageData.hpp" />
     <ClInclude Include="StageSelect\StageSelect.hpp" />
     <ClInclude Include="StageSelect\StageSelectFlag.hpp" />
+    <ClInclude Include="StageSelect\TearGemDisplay.hpp" />
+    <ClInclude Include="StageSelect\TearGemDisplayParam.hpp" />
     <ClInclude Include="StartActor.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
