--- a/StageEditor/StageEditor.vcxproj.filters
+++ b/StageEditor/StageEditor.vcxproj.filters
@@ -28,6 +28,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\GemEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\TearGemEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\FrogEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\ThroughFloorEditor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\EditorCamera.hpp" />
@@ -60,5 +61,6 @@
     <ClInclude Include="SceneEditor\ActorEditor\GemEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\TearGemEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\FrogEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\ThroughFloorEditor.hpp" />
   </ItemGroup>
 </Project>
