--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="StageSelect\ChoiceIcon.cpp" />
     <ClCompile Include="StageSelect\StageSelect.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Game.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StageSelect\DataDisplay\StringDisplay.hpp" />
