--- a/StageEditor/StageEditor.vcxproj
+++ b/StageEditor/StageEditor.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\ActorEditorBase.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\BlinderEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\CameraEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\CarrotEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\CircleBeeEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\Data\PosData.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\FrogEditor.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="SceneEditor\ActorEditor\ActorEditorBase.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\BlinderEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\CameraEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\CarrotEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\CircleBeeEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\Data\Data.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\Data\PosData.hpp" />
