--- a/StageEditor/StageEditor.vcxproj
+++ b/StageEditor/StageEditor.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\TearGemEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\ThroughFloorEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\TogeEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\TrampolineEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\TripleEditor.cpp" />
     <ClCompile Include="SceneEditor\CreateActorEditor.cpp" />
     <ClCompile Include="SceneEditor\SceneEditor.cpp" />
@@ -206,6 +207,7 @@
     <ClInclude Include="SceneEditor\ActorEditor\TearGemEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\ThroughFloorEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\TogeEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\TrampolineEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\TripleEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\Utility\StringDataCheker.hpp" />
     <ClInclude Include="SceneEditor\BeginPolicy.hpp" />
