--- a/StageEditor/StageEditor.vcxproj.filters
+++ b/StageEditor/StageEditor.vcxproj.filters
@@ -32,6 +32,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\MoveGroundEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\CarrotEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\DoguEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\TrampolineEditor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\EditorCamera.hpp" />
@@ -68,5 +69,6 @@
     <ClInclude Include="SceneEditor\ActorEditor\MoveGroundEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\CarrotEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\DoguEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\TrampolineEditor.hpp" />
   </ItemGroup>
 </Project>
