--- a/StageEditor/StageEditor.vcxproj
+++ b/StageEditor/StageEditor.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\GravityBox4Editor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\GroundEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\GuruWarpEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\MaiEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\MoveGroundEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\PlayerEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\StraightBeeEditor.cpp" />
@@ -201,6 +202,7 @@
     <ClInclude Include="SceneEditor\ActorEditor\GravityBox4Editor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\GroundEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\GuruWarpEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\MaiEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\MoveGroundEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\PlayerEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\StraightBeeEditor.hpp" />
