--- a/StageEditor/StageEditor.vcxproj.filters
+++ b/StageEditor/StageEditor.vcxproj.filters
@@ -33,6 +33,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\DoguEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\TrampolineEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\GoalEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\MaiEditor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\EditorCamera.hpp" />
@@ -70,5 +71,6 @@
     <ClInclude Include="SceneEditor\ActorEditor\CarrotEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\DoguEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\TrampolineEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\MaiEditor.hpp" />
   </ItemGroup>
 </Project>
