--- a/StageEditor/StageEditor.vcxproj.filters
+++ b/StageEditor/StageEditor.vcxproj.filters
@@ -37,6 +37,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\TogeBlockEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\CycleLiftEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\MoveLiftEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\HeadBlockEditor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\EditorCamera.hpp" />
@@ -78,5 +79,6 @@
     <ClInclude Include="SceneEditor\ActorEditor\TogeBlockEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\CycleLiftEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\MoveLiftEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\HeadBlockEditor.hpp" />
   </ItemGroup>
 </Project>
