--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -1,32 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="StageSelect\DataDisplay\StringDisplay.cpp" />
-    <ClCompile Include="StageSelect\DataDisplay\TearGemDisplay.cpp" />
-    <ClCompile Include="StageSelect\HexChip\HexChip.cpp" />
-    <ClCompile Include="StageSelect\ChoiceIcon.cpp" />
-    <ClCompile Include="StageSelect\StageSelect.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameScene\StageSelect\DataDisplay\StringDisplay.cpp" />
+    <ClCompile Include="GameScene\StageSelect\DataDisplay\TearGemDisplay.cpp" />
+    <ClCompile Include="GameScene\StageSelect\HexChip\HexChip.cpp" />
+    <ClCompile Include="GameScene\StageSelect\ChoiceIcon.cpp" />
+    <ClCompile Include="GameScene\GameSceneBase.cpp" />
+    <ClCompile Include="GameScene\GameStage.cpp" />
+    <ClCompile Include="GameScene\StageSelect.cpp" />
     <ClCompile Include="RectCurtain\RectCurtain.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="StageSelect\DataDisplay\StringDisplay.hpp" />
-    <ClInclude Include="StageSelect\DataDisplay\TearGemDisplay.hpp" />
-    <ClInclude Include="StageSelect\DataDisplay\TearGemDisplayParam.hpp" />
-    <ClInclude Include="StageSelect\HexChip\HexChip.hpp" />
-    <ClInclude Include="StageSelect\HexChip\HexChipParam.hpp" />
-    <ClInclude Include="StageSelect\HexChip\ToVector2.hpp" />
-    <ClInclude Include="StageSelect\ChoiceIcon.hpp" />
-    <ClInclude Include="StageSelect\StageSelect.hpp" />
-    <ClInclude Include="StageSelect\StageSelectParam.hpp" />
-    <ClInclude Include="StageSelect\StageStateFlag.hpp" />
-    <ClInclude Include="Game.hpp" />
-    <ClInclude Include="StageData.hpp" />
-    <ClInclude Include="StageStateFlag.hpp" />
-    <ClInclude Include="StartActor.hpp" />
+    <ClInclude Include="GameScene\StageSelect\DataDisplay\StringDisplay.hpp" />
+    <ClInclude Include="GameScene\StageSelect\DataDisplay\TearGemDisplay.hpp" />
+    <ClInclude Include="GameScene\StageSelect\DataDisplay\TearGemDisplayParam.hpp" />
+    <ClInclude Include="GameScene\StageSelect\HexChip\HexChip.hpp" />
+    <ClInclude Include="GameScene\StageSelect\HexChip\HexChipParam.hpp" />
+    <ClInclude Include="GameScene\StageSelect\HexChip\ToVector2.hpp" />
+    <ClInclude Include="GameScene\StageSelect\ChoiceIcon.hpp" />
+    <ClInclude Include="GameScene\StageSelect\StageSelectParam.hpp" />
+    <ClInclude Include="GameScene\Utility\HexVec.hpp" />
+    <ClInclude Include="GameScene\GameData.hpp" />
+    <ClInclude Include="GameScene\GameSceneBase.hpp" />
+    <ClInclude Include="GameScene\GameSceneFlag.hpp" />
+    <ClInclude Include="GameScene\GameStage.hpp" />
+    <ClInclude Include="GameScene\StageDataParam.hpp" />
+    <ClInclude Include="GameScene\StageSelect.hpp" />
+    <ClInclude Include="GameScene\StageStateFlag.hpp" />
     <ClInclude Include="RectCurtain\RectCurtain.hpp" />
     <ClInclude Include="RectCurtain\RectCurtainParam.hpp" />
-    <ClInclude Include="StageSelect\HexVec.hpp" />
+    <ClInclude Include="Game.hpp" />
+    <ClInclude Include="StageData.hpp" />
   </ItemGroup>
 </Project>
